--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4059,5 +4059,25 @@
         <target>Ranking Entry</target>
       </segment>
     </unit>
+    <unit id="gk_4TAg" name="Event-Markierung entfernen">
+      <notes>
+        <note category="german">Event-Markierung entfernen</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Event-Markierung entfernen</source>
+        <target>Remove event town marking</target>
+      </segment>
+    </unit>
+    <unit id="RSDaSun" name="Als Event-Stadt markieren">
+      <notes>
+        <note category="german">Als Event-Stadt markieren</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Als Event-Stadt markieren</source>
+        <target>Mark as an event town</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
