--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -22935,7 +22935,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="AspdF7m" name="Ranking-Ausschluss">
       <notes>
         <note category="german">Ranking-Ausschluss</note>
-        <note category="from">twig:///templates/ajax/soul/death.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/towns/list.html.twig;twig:///templates/ajax/soul/death.html.twig</note>
       </notes>
       <segment>
         <source>Ranking-Ausschluss</source>
